[CSS] Fix font name.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ em {
 
 code {
   padding: 0.2em 0.5em;
-  font-family: "Liberation Sans Mono", "DejaVu Sans Mono", monospace;
+  font-family: "Liberation Mono", "DejaVu Sans Mono", monospace;
   font-size: 0.8em;
   background-color: #eeeeee;
 }
