--- a/style.css
+++ b/style.css
@@ -1,15 +1,9 @@
 body {
   margin: 0 auto;
   max-width: 36em;
-  color: #333333;
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 13pt;
-  line-height: 1.5;
-}
-
-a {
-  text-decoration: none;
-  border-bottom: 0.1em solid;
+  line-height: 1.6;
+  color: #333333;
 }
 
 em {
@@ -18,76 +12,41 @@ em {
 }
 
 code {
-  padding: 0.2em 0.5em;
+  padding: 0.1em 0.3em;
   font-family: "Liberation Mono", "DejaVu Sans Mono", monospace;
-  font-size: 0.8em;
+  font-size: 0.9em;
   background-color: #eeeeee;
-}
-
-kbd {
-  border: 0.1em solid #aaaaaa;
-  border-radius: 0.2em;
-  box-shadow: 0.1em 0.1em #aaaaaa;
-  padding: 0em 0.4em;
-  font-family: inherit;
-  font-size: 1em;
-}
-
-
-h1, h2 {
-  margin-top: 1.5em;
 }
 
 header {
   display: block;
-  margin: 2em auto 1em;
+  margin: 1.6em auto 1em;
   text-align: center;
 }
 
 header img {
-  width: 7em;
+  width: 5em;
 }
 
 header h1 {
-  margin-top: 0.2em;
+  margin-top: 0.3em;
+  font-size: 1.6em;
 }
 
 nav {
   text-align: center;
-  border-top: 0.1em solid #dddddd;
-  border-bottom: 0.1em solid #dddddd;
+  border-top: 0.1em solid #bbbbbb;
+  border-bottom: 0.1em solid #bbbbbb;
 }
 
 footer {
-  padding: 1.2em 0;
-  margin-top: 4em;
-  border-top: 0.12em solid #dddddd;
+  padding: 1em 0;
+  margin-top: 2em;
+  border-top: 0.12em solid #bbbbbb;
   font-size: 0.8em;
   text-align: center;
-}
-
-#dllist p {
-  margin: 0.5em 0;
-}
-
-#dllist a {
-  font-weight: bold;
-}
-
-.screenshot {
-  margin: 1em 0;
 }
 
 .screenshot img {
   max-width: 100%;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-}
-
-.screenshot p {
-  margin: 0.4em 0;
-  color: #777777;
-  font-size: 0.8em;
-  text-align: center;
 }
