CSS: Add horizontal padding

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0 auto;
+  padding: 0 1em 0;
   max-width: 36em;
   font-family: Helvetica, Arial, sans-serif;
   line-height: 1.6;
